# advent-of-code-rust

./: Cargo.toml  README.md  pyproject.toml
advent_cli/: Cargo.toml
advent_cli/src/: cli.rs  main.rs
common/: Cargo.toml
common/src/: command.rs  errors.rs  lib.rs  utils.rs
day1/: Cargo.toml
day1/day1a/: Cargo.toml
day1/day1a/src/: main.rs
day1/src/: main.rs  solution.rs
day2/: Cargo.toml
day2/src/: solution.rs
day3/: Cargo.toml
day3/src/: encoding.rs  lib.rs  solution.rs
day4/: Cargo.toml
day4/src/: solution.rs
day5/: Cargo.toml
day5/src/: implementation.rs  lib.rs  solution.rs
